@@ -83,33 +83,33 @@ print("AFFECTED ROWS: \n");
 checkSuccess($cur->affectedRows(),1);
 print("\n");
 
-print("BIND BY NAME: \n");
-$cur->prepareQuery("insert into testtable values (:var1,:var2,:var3,:var4,:var5,:var6,:var7,:var8)");
+print("BIND BY POSITION: \n");
+$cur->prepareQuery("insert into testtable values (\$1,\$2,\$3,\$4,\$5,\$6,\$7,\$8)");
 checkSuccess($cur->countBindVariables(),8);
-$cur->inputBind("var1",5);
-$cur->inputBind("var2",5.5,4,2);
-$cur->inputBind("var3",5.5,4,2);
-$cur->inputBind("var4",5);
-$cur->inputBind("var5","testchar5");
-$cur->inputBind("var6","testvarchar5");
-$cur->inputBind("var7","01/01/2005");
-$cur->inputBind("var8","05:00:00");
+$cur->inputBind("1",5);
+$cur->inputBind("2",5.5,4,2);
+$cur->inputBind("3",5.5,4,2);
+$cur->inputBind("4",5);
+$cur->inputBind("5","testchar5");
+$cur->inputBind("6","testvarchar5");
+$cur->inputBind("7","01/01/2005");
+$cur->inputBind("8","05:00:00");
 checkSuccess($cur->executeQuery(),1);
 $cur->clearBinds();
-$cur->inputBind("var1",6);
-$cur->inputBind("var2",6.6,4,2);
-$cur->inputBind("var3",6.6,4,2);
-$cur->inputBind("var4",6);
-$cur->inputBind("var5","testchar6");
-$cur->inputBind("var6","testvarchar6");
-$cur->inputBind("var7","01/01/2006");
-$cur->inputBind("var8","06:00:00");
+$cur->inputBind("1",6);
+$cur->inputBind("2",6.6,4,2);
+$cur->inputBind("3",6.6,4,2);
+$cur->inputBind("4",6);
+$cur->inputBind("5","testchar6");
+$cur->inputBind("6","testvarchar6");
+$cur->inputBind("7","01/01/2006");
+$cur->inputBind("8","06:00:00");
 checkSuccess($cur->executeQuery(),1);
 print("\n");
 
-print("ARRAY OF BINDS BY NAME: \n");
+print("ARRAY OF BINDS BY POSITION: \n");
 $cur->clearBinds();
-@vars=("var1","var2","var3","var4","var5","var6","var7","var8");
+@vars=("\$1","\$2","\$3","\$4","\$5","\$6","\$7","\$8");
 @vals=(7,7.7,7.7,7,"testchar7","testvarchar7","01/01/2007","07:00:00");
 @precs=(0,4,4,0,0,0,0,0);
 @scales=(0,2,2,0,0,0,0,0);
@@ -117,17 +117,17 @@ $cur->inputBinds(\@vars,\@vals,\@precs,\@scales);
 checkSuccess($cur->executeQuery(),1);
 print("\n");
 
-print("BIND BY NAME WITH VALIDATION: \n");
+print("BIND BY POSITION WITH VALIDATION: \n");
 $cur->clearBinds();
-$cur->inputBind("var1",8);
-$cur->inputBind("var2",8.8,4,2);
-$cur->inputBind("var3",8.8,4,2);
-$cur->inputBind("var4",8);
-$cur->inputBind("var5","testchar8");
-$cur->inputBind("var6","testvarchar8");
-$cur->inputBind("var7","01/01/2008");
-$cur->inputBind("var8","08:00:00");
-$cur->inputBind("var9","junkvalue");
+$cur->inputBind("1",8);
+$cur->inputBind("2",8.8,4,2);
+$cur->inputBind("3",8.8,4,2);
+$cur->inputBind("4",8);
+$cur->inputBind("5","testchar8");
+$cur->inputBind("6","testvarchar8");
+$cur->inputBind("7","01/01/2008");
+$cur->inputBind("8","08:00:00");
+$cur->inputBind("9","junkvalue");
 $cur->validateBinds();
 checkSuccess($cur->executeQuery(),1);
 print("\n");
