@@ -39,6 +39,8 @@
 		fetching results of stored procedure
 	renamed interbase.create.sh to firebird.create.sh
 	fixed a bug that could overrun the postgresql bind array
+	fixed bug that caused connection daemon sockets to be double-freed on
+		shutdown after a suspended session
 
 0.41 - added configure test for ruby.h
 	added a couple of new functions to the mysql drop-in library
